# WebShark-Marimo-Copilot

./: .env.example  .gitignore  CLAUDE.md  MARIMO_CHEATSHEET.md  MEMO.md  README.md  pyproject.toml
.claude/: settings.json
notebooks/: 00_gut_check.py  01_demo_churn.py  01_marimo_pair_trial.py  02_favorita_realdata.py  03_penguins_baseline.py
scripts/: bench_plan_speed.py  smoke_test_leakage.py  smoke_test_plan.py  validate_bank_marketing.py  validate_california_clean.py  validate_favorita.py  validate_favorita_repeat.py
src/ds_copilot/: __init__.py  agent.py  dag.py  decisions.py  profiler.py  ui.py
tests/: test_agent.py  test_dag.py  test_decisions.py  test_profiler.py
