[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ds-copilot"
version = "0.0.1"
description = "DAG-aware AI copilot for reactive data-science notebooks (Marimo + Claude)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.9",
    "anthropic>=0.40",
    "polars>=1.0",
    "pandas>=2.2",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
